IADBXCIGB-90 / fix DataTables toolbar overlap with search field

--- a/ckanext/idb_theme/themes/idb/assets/css/main.css
+++ b/ckanext/idb_theme/themes/idb/assets/css/main.css
@@ -15191,6 +15191,12 @@ footer .ckan-footer-logo {
   right: 0;
 }
 
+body.dt-view #dtprv_filter {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 0.5rem;
+}
+
 .resource-view-filters {
   margin-bottom: 1em;
 }
