--- a/ckanext/idb_theme/themes/idb/assets/scss/_resource-view.scss
+++ b/ckanext/idb_theme/themes/idb/assets/scss/_resource-view.scss
@@ -4,6 +4,14 @@
   }
 }
 
+body.dt-view {
+  #dtprv_filter {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 0.5rem;
+  }
+}
+
 .resource-view-filters {
   margin-bottom: 1em;
   .resource-view-filter {
